# rust_on_stm32

./: Cargo.toml
.cargo/: config
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: addRules.sh
src/: main.rs
